refactor: delete getLast() method to work with Java 17